--- a/apps/drupal-lab/config/sync/core.extension.yml
+++ b/apps/drupal-lab/config/sync/core.extension.yml
@@ -31,6 +31,7 @@ theme:
   classy: 0
   seven: 0
   bartik: 0
+  flash: 0
 profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
