Adding Bolt foundation to Flash theme

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "packages/config-presets/config-browserlist",
     "packages/config-presets/config-eslint",
     "packages/config-presets/config-stylelint",
+    "apps/drupal-lab/web/themes/flash",
     "apps/*"
   ]
 }
