--- a/packages/components/bolt-collapse/package.json
+++ b/packages/components/bolt-collapse/package.json
@@ -29,7 +29,8 @@
     "prop-types": "^15.6.1",
     "classnames": "^2.2.5",
     "react-transition-group": "2.2.1",
-    "ev-emitter": "^1.1.1"
+    "ev-emitter": "^1.1.1",
+    "downshift": "^1.30.1"
   },
   "scripts": {}
 }
