test: working proof of concept of PHP-based web component SSR! Testing component-specific updates needed to keep things working smoothly

--- a/apps/bolt-site/composer.json
+++ b/apps/bolt-site/composer.json
@@ -17,6 +17,7 @@
       "bolt-design-system/core-php": "*",
       "bolt-design-system/drupal-stubs": "*",
       "twig/twig": "^1.0",
-      "pattern-lab/drupal-twig-extensions": "^0.2.0"
+      "pattern-lab/drupal-twig-extensions": "^0.2.0",
+      "sabberworm/php-css-parser": "dev-master"
     }
 }
