--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -25,9 +25,11 @@
     "@bolt/babel-preset-bolt": "^1.0.0-rc.7",
     "@theme-tools/sass-export-data": "^1.0.3",
     "@theme-tools/sass-import-globbing": "^1.0.0",
+    "webpack-event-plugin": "^1.0.0",
     "autoprefixer": "^7.2.4",
     "babel-loader": "^8.0.0-beta.2",
     "browser-sync": "^2.23.5",
+    "cache-loader": "^1.2.2",
     "chalk": "^2.3.0",
     "chokidar": "^2.0.0",
     "clean-css-loader": "^0.1.4",
@@ -46,6 +48,7 @@
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
+    "raw-loader": "^0.5.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "postcss-discard-duplicates": "^2.1.0",
@@ -56,6 +59,7 @@
     "semver": "^5.4.1",
     "sharp": "^0.19.0",
     "svgo": "^1.0.5",
+    "inline-source-loader": "^0.0.1",
     "string-replace-loader": "^1.3.0",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.2.0",
