--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -26,7 +26,8 @@
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1",
     "gregwar/image": "^2.0",
-    "tooleks/php-avg-color-picker": "^1.1.2"
+    "tooleks/php-avg-color-picker": "^1.1.2",
+    "sabberworm/php-css-parser": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^7"
