--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "npm run build",
     "snyk-protect": "snyk protect",
+    "lint:js": "eslint 'packages/**/*.js' 'apps/**/*.js'",
+    "lint:js:fix": "npm run lint:js -- --fix",
     "lint:style": "stylelint 'packages/**/*.scss' 'apps/**/*.scss'",
     "lint:style:fix": "npm run lint:style -- --fix",
+    "lint": "npm-run-all --continue-on-error --serial lint:*",
     "test:js": "jest",
     "test:js:watch": "jest --watch",
     "test:php": "cd packages/core-php && composer run test",
