--- a/packages/config-presets/config-eslint/package.json
+++ b/packages/config-presets/config-eslint/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.3.2"
+    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-plugin-import": "^2.9.0"
   },
   "engines": {
     "node": ">= 6"
