--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:style": "stylelint 'packages/**/*.scss' 'apps/**/*.scss'",
     "lint:style:fix": "npm run lint:style -- --fix",
+    "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors",
     "lint": "npm-run-all --continue-on-error --serial lint:*",
     "test:js": "jest",
     "test:js:watch": "jest --watch",
