Share - updated package.json dependencies

--- a/packages/components/bolt-share/package.json
+++ b/packages/components/bolt-share/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.9",
-    "@bolt/components-link": "1.0.0-rc.9",
-    "@bolt/components-icon": "1.0.0-rc.9"
+    "@bolt/components-link": "^1.0.0-rc.9",
+    "@bolt/components-icon": "^1.0.0-rc.9"
   }
 }
