--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^7.2.4",
     "babel-loader": "^8.0.0-beta.2",
     "browser-sync": "^2.23.5",
+    "cache-loader": "^1.2.2",
     "chalk": "^2.3.0",
     "chokidar": "^2.0.0",
     "clean-css-loader": "^0.1.4",
@@ -55,9 +56,9 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.4.1",
     "sharp": "^0.19.0",
-    "svgo": "^1.0.5",
     "string-replace-loader": "^1.3.0",
     "style-loader": "^0.19.1",
+    "svgo": "^1.0.5",
     "uglifyjs-webpack-plugin": "^1.2.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0",
