chore: removing old accordion component; setting to private for now

--- a/packages/components/bolt-accordion/package.json
+++ b/packages/components/bolt-accordion/package.json
@@ -1,8 +1,5 @@
 {
   "name": "@bolt/components-accordion",
-  "style": "accordion.scss",
-  "main": "accordion.js",
-  "twig": "src/accordion2.twig",
   "description": "Accordion Component",
   "keywords": [
     "bolt design system",
@@ -12,7 +9,6 @@
     "acccordion",
     "collapsible"
   ],
-  "version": "1.0.0-rc.3",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -23,9 +19,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "lodash": "^4.17.5",
-    "@bolt/core": "^1.0.0-rc.3"
-  },
-  "scripts": {}
+  "scripts": {},
+  "private": true
 }
