Updates to Tooltip component and WIP on Share component

--- a/packages/components/bolt-tooltip/package.json
+++ b/packages/components/bolt-tooltip/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.9",
+    "@bolt/global": "^1.0.0-rc.9",
     "@bolt/components-button": "^1.0.0-rc.9"
   }
 }
