Block List - convert to web component and pass items through props

--- a/packages/components/bolt-block-list/package.json
+++ b/packages/components/bolt-block-list/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "style": "src/block-list.scss",
+  "main": "src/block-list.js",
   "twig": "src/block-list.twig",
   "publishConfig": {
     "access": "public"
