--- a/apps/drupal-lab/web/themes/flash/package.json
+++ b/apps/drupal-lab/web/themes/flash/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@bolt/build-tools": "^1.0.0-rc.7",
+    "@bolt/components-headline": "^1.0.0-rc.9",
     "@bolt/global": "^1.0.0-rc.7"
   }
 }
