--- a/apps/drupal-lab/composer.json
+++ b/apps/drupal-lab/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "basaltinc/drupal-lite",
-  "description": "Project template for a simple Drupal 8 using SQLite for easy dev testing.",
+  "name": "bolt-design-system/drupal-lab",
+  "description": "Drupal Lab",
   "type": "project",
   "license": "GPL-2.0-or-later",
   "authors": [
