--- a/packages/drupal-modules/bolt_connect/bolt_connect.routing.yml
+++ b/packages/drupal-modules/bolt_connect/bolt_connect.routing.yml
@@ -4,12 +4,12 @@ bolt_connect.info_page:
     _controller: '\Drupal\bolt_connect\Controller\BoltConnectController::customPage'
     _title: 'Bolt Connect Info'
   requirements:
-    _permission: 'access content'
+    _permission: 'access administration pages'
 bolt_connect.config_form:
   path: '/admin/config/bolt_connect/config'
   defaults:
     _form: '\Drupal\bolt_connect\BoltConnectForm'
-    _title: 'BoltConnectForm'
+    _title: 'Bolt Connect Config'
   requirements:
     _permission: 'access administration pages'
   options:
