--- a/packages/components/bolt-video/package.json
+++ b/packages/components/bolt-video/package.json
@@ -26,14 +26,14 @@
 	"license": "MIT",
 	"repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-video",
 	"bugs": "https://github.com/bolt-design-system/bolt/issues",
-	"style": "src/_video.scss",
+	"style": "src/video.scss",
 	"main": "src/video.js",
 	"publishConfig": {
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/components-brightcove-player": "^1.0.0-rc.9",
 		"@bolt/components-button": "^1.0.0-rc.9",
-		"@bolt/core": "^1.0.0-rc.9"
+    "@bolt/core": "^1.0.0-rc.9",
+    "dasherize": "^2.0.0"
 	}
 }
