--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -33,35 +33,37 @@
     "clean-css-loader": "^0.1.4",
     "commander": "^2.12.2",
     "convert-hrtime": "^2.0.0",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.8",
     "front-matter": "^2.3.0",
+    "fs-extra": "^5.0.0",
     "globby": "^7.1.1",
     "js-yaml": "^3.10.0",
     "jsonschema": "^1.2.2",
     "lodash.debounce": "^4.0.8",
     "marked": "^0.3.12",
+    "mini-css-extract-plugin": "^0.2.0",
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "ora": "^1.3.0",
     "postcss-discard-duplicates": "^2.1.0",
-    "postcss-loader": "^2.0.10",
+    "postcss-loader": "^2.1.3",
     "pretty-ms": "^3.1.0",
-    "resolve-url-loader": "^2.2.1",
-    "sass-loader": "^6.0.6",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^6.0.7",
     "semver": "^5.4.1",
     "sharp": "^0.19.0",
     "string-replace-loader": "^1.3.0",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.20.3",
     "svgo": "^1.0.5",
-    "uglifyjs-webpack-plugin": "^1.2.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.0",
-    "webpack-manifest-plugin": "^2.0.0-rc.1"
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "webpack": "^4.2.0"
   },
   "publishConfig": {
     "access": "public"
