--- a/packages/components/bolt-copy-to-clipboard/package.json
+++ b/packages/components/bolt-copy-to-clipboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-copy-to-clipboard",
   "description": "Copy to Clipboard Component in Bolt",
-  "version": "1.0.0-rc.9",
+  "version": "0.0.0",
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
   "repository": {
