Package.json version fix

--- a/packages/components/bolt-block-list/package.json
+++ b/packages/components/bolt-block-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-block-list",
   "description": "Block-list Component in Bolt",
-  "version": "1.0.0-rc.9",
+  "version": "0.0.0",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
