--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "composer:pl": "cd apps/pattern-lab && rm -rf vendor composer.lock && composer install --no-interaction",
     "composer:core-php": "cd packages/core-php && rm -rf vendor composer.lock && composer install --no-interaction",
     "composer:bolt-site": "cd apps/bolt-site && rm -rf vendor composer.lock && composer install --no-interaction",
-    "composer:drupal-lab": "cd apps/drupal-lab && rm -rf vendor composer.lock && composer install --no-interaction",
+    "composer:drupal-lab": "cd apps/drupal-lab && rm -rf vendor web/modules/contrib composer.lock && composer install --no-interaction",
     "composer": "npm-run-all --serial composer:*",
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
