Referencing dep version better

--- a/apps/drupal-lab/composer.json
+++ b/apps/drupal-lab/composer.json
@@ -23,8 +23,7 @@
     }
   ],
   "require": {
-    "bolt-design-system/bolt_connect": "^1.0@RC",
-    "bolt-design-system/core-php": "^1.0@RC",
+    "bolt-design-system/bolt_connect": "*",
     "composer/installers": "^1.2",
     "cweagans/composer-patches": "^1.6",
     "drupal-composer/drupal-scaffold": "^2.2",
