refactor: UI cleanup + fixes

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -21,19 +21,20 @@
   "dependencies": {
     "@bolt/build-tools": "^1.0.0-rc.9",
     "@bolt/components-action-blocks": "^1.0.0-rc.9",
-    "@bolt/components-background": "^1.0.0-rc.9",
     "@bolt/components-background-shapes": "^1.0.0-rc.9",
+    "@bolt/components-background": "^1.0.0-rc.9",
     "@bolt/components-band": "^1.0.0-rc.9",
     "@bolt/components-blockquote": "^1.0.0-rc.9",
     "@bolt/components-breadcrumb": "^1.0.0-rc.9",
     "@bolt/components-brightcove-player": "^1.0.0-rc.9",
-    "@bolt/components-button": "^1.0.0-rc.9",
     "@bolt/components-button-group": "^1.0.0-rc.9",
+    "@bolt/components-button": "^1.0.0-rc.9",
     "@bolt/components-card": "^1.0.0-rc.9",
-    "@bolt/components-chip": "^1.0.0-rc.9",
     "@bolt/components-chip-list": "^1.0.0-rc.9",
+    "@bolt/components-chip": "^1.0.0-rc.9",
     "@bolt/components-critical-fonts": "^1.0.0-rc.9",
     "@bolt/components-device-viewer": "^1.0.0-rc.9",
+    "@bolt/components-dropdown": "0.0.0",
     "@bolt/components-figure": "^1.0.0-rc.9",
     "@bolt/components-form": "^1.0.0-rc.9",
     "@bolt/components-headline": "^1.0.0-rc.9",
@@ -42,6 +43,7 @@
     "@bolt/components-link": "^1.0.0-rc.9",
     "@bolt/components-logo": "^1.0.0-rc.9",
     "@bolt/components-nav-bar": "^1.0.0-rc.9",
+    "@bolt/components-nav-list": "0.0.0",
     "@bolt/components-ordered-list": "^1.0.0-rc.9",
     "@bolt/components-page-footer": "^1.0.0-rc.9",
     "@bolt/components-page-header": "^1.0.0-rc.9",
