--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "packages/components/bolt-link",
     "packages/components/bolt-logo",
     "packages/components/bolt-nav-bar",
+    "packages/components/bolt-nav-list",
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-footer",
     "packages/components/bolt-page-header",
