--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,5 +25,8 @@
     "yocss": "^0.5.1"
   },
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "homepage": "https://bolt-design-system.com"
+  "homepage": "https://bolt-design-system.com",
+  "publishConfig": {
+    "access": "public"
+  }
 }
