--- a/package.json
+++ b/package.json
@@ -84,13 +84,6 @@
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.3.0"
   },
-  "dependencies": {
-    "read-pkg": "^3.0.0",
-    "read-pkg-up": "^3.0.0",
-    "p-iteration": "^1.1.5",
-    "find-pkg": "^2.0.0",
-    "assert": "^1.4.1"
-  },
   "workspaces": [
     "packages/components/bolt-action-blocks",
     "packages/components/bolt-background-shapes",
@@ -135,6 +128,7 @@
     "packages/config-presets/config-eslint",
     "packages/config-presets/config-stylelint",
     "apps/drupal-lab/web/themes/flash",
-    "apps/*"
+    "apps/*",
+    "!apps/drupal-lab"
   ]
 }
