--- a/apps/drupal-lab/web/themes/flash/package.json
+++ b/apps/drupal-lab/web/themes/flash/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@bolt/drupal-lab-flash-theme",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.11",
   "private": true,
   "description": "",
   "scripts": {
     "build": "bolt build --prod"
   },
   "dependencies": {
-    "@bolt/build-tools": "^1.0.0-rc.7",
-    "@bolt/components-headline": "^1.0.0-rc.9",
-    "@bolt/global": "^1.0.0-rc.7"
+    "@bolt/build-tools": "^1.0.0-rc.11",
+    "@bolt/components-headline": "^1.0.0-rc.11",
+    "@bolt/global": "^1.0.0-rc.11"
   }
 }
