--- a/packages/components/bolt-tooltip/package.json
+++ b/packages/components/bolt-tooltip/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-tooltip",
   "description": "Tooltip Component in Bolt",
-  "version": "0.0.0",
+  "version": "1.0.0-rc.11",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
@@ -18,8 +18,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.9",
-    "@bolt/global": "^1.0.0-rc.9",
-    "@bolt/components-button": "^1.0.0-rc.9"
+    "@bolt/components-button": "^1.0.0-rc.11",
+    "@bolt/core": "^1.0.0-rc.11",
+    "@bolt/global": "^1.0.0-rc.11"
   }
 }
