--- a/apps/bolt-site/package.json
+++ b/apps/bolt-site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/website",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -18,36 +18,36 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/build-tools": "^1.0.0-rc.12",
-    "@bolt/components-action-blocks": "^1.0.0-rc.12",
-    "@bolt/components-background": "^1.0.0-rc.12",
-    "@bolt/components-background-shapes": "^1.0.0-rc.12",
-    "@bolt/components-band": "^1.0.0-rc.12",
-    "@bolt/components-blockquote": "^1.0.0-rc.12",
-    "@bolt/components-breadcrumb": "^1.0.0-rc.12",
-    "@bolt/components-button": "^1.0.0-rc.12",
-    "@bolt/components-button-group": "^1.0.0-rc.12",
-    "@bolt/components-card": "^1.0.0-rc.12",
-    "@bolt/components-chip": "^1.0.0-rc.12",
-    "@bolt/components-chip-list": "^1.0.0-rc.12",
-    "@bolt/components-device-viewer": "^1.0.0-rc.12",
-    "@bolt/components-figure": "^1.0.0-rc.12",
-    "@bolt/components-headline": "^1.0.0-rc.12",
-    "@bolt/components-icon": "^1.0.0-rc.12",
-    "@bolt/components-image": "^1.0.0-rc.12",
-    "@bolt/components-link": "^1.0.0-rc.12",
-    "@bolt/components-logo": "^1.0.0-rc.12",
-    "@bolt/components-nav-bar": "^1.0.0-rc.12",
-    "@bolt/components-ordered-list": "^1.0.0-rc.12",
-    "@bolt/components-page-footer": "^1.0.0-rc.12",
-    "@bolt/components-page-header": "^1.0.0-rc.12",
-    "@bolt/components-site": "^1.0.0-rc.12",
-    "@bolt/components-smooth-scroll": "^1.0.0-rc.12",
-    "@bolt/components-sticky": "^1.0.0-rc.12",
-    "@bolt/components-teaser": "^1.0.0-rc.12",
-    "@bolt/components-unordered-list": "^1.0.0-rc.12",
-    "@bolt/core": "^1.0.0-rc.12",
-    "@bolt/global": "^1.0.0-rc.12",
+    "@bolt/build-tools": "^1.0.0",
+    "@bolt/components-action-blocks": "^1.0.0",
+    "@bolt/components-background": "^1.0.0",
+    "@bolt/components-background-shapes": "^1.0.0",
+    "@bolt/components-band": "^1.0.0",
+    "@bolt/components-blockquote": "^1.0.0",
+    "@bolt/components-breadcrumb": "^1.0.0",
+    "@bolt/components-button": "^1.0.0",
+    "@bolt/components-button-group": "^1.0.0",
+    "@bolt/components-card": "^1.0.0",
+    "@bolt/components-chip": "^1.0.0",
+    "@bolt/components-chip-list": "^1.0.0",
+    "@bolt/components-device-viewer": "^1.0.0",
+    "@bolt/components-figure": "^1.0.0",
+    "@bolt/components-headline": "^1.0.0",
+    "@bolt/components-icon": "^1.0.0",
+    "@bolt/components-image": "^1.0.0",
+    "@bolt/components-link": "^1.0.0",
+    "@bolt/components-logo": "^1.0.0",
+    "@bolt/components-nav-bar": "^1.0.0",
+    "@bolt/components-ordered-list": "^1.0.0",
+    "@bolt/components-page-footer": "^1.0.0",
+    "@bolt/components-page-header": "^1.0.0",
+    "@bolt/components-site": "^1.0.0",
+    "@bolt/components-smooth-scroll": "^1.0.0",
+    "@bolt/components-sticky": "^1.0.0",
+    "@bolt/components-teaser": "^1.0.0",
+    "@bolt/components-unordered-list": "^1.0.0",
+    "@bolt/core": "^1.0.0",
+    "@bolt/global": "^1.0.0",
     "broken-link-checker": "^0.7.7"
   }
 }
