--- a/packages/components/bolt-image/package.json
+++ b/packages/components/bolt-image/package.json
@@ -9,7 +9,7 @@
     "component",
     "image"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.10.2",
   "maintainers": [
     {
@@ -33,7 +33,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.12",
+    "@bolt/core": "^1.0.0",
     "lazysizes": "^4.0.1"
   },
   "schema": "image.schema.yml"
