--- a/packages/components/bolt-page-footer/package.json
+++ b/packages/components/bolt-page-footer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-page-footer",
   "description": "Page Footer Component",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.9.0",
   "license": "MIT",
   "private": true,
