--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "2.5.1",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "command": {
     "publish": {
       "allowBranch": "master"
