--- a/packages/components/bolt-action-blocks/package.json
+++ b/packages/components/bolt-action-blocks/package.json
@@ -8,7 +8,7 @@
     "design system",
     "components"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
@@ -32,6 +32,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/core": "^1.0.0"
   }
 }
