--- a/packages/components/bolt-background/package.json
+++ b/packages/components/bolt-background/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.9.2",
   "maintainers": [
     {
@@ -30,8 +30,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-background-shapes": "^1.0.0-rc.12",
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/components-background-shapes": "^1.0.0",
+    "@bolt/core": "^1.0.0"
   },
   "schema": "background.schema.yml"
 }
