--- a/packages/components/bolt-button-group/package.json
+++ b/packages/components/bolt-button-group/package.json
@@ -8,7 +8,7 @@
     "design system",
     "button group"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
@@ -31,7 +31,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/core": "^1.0.0"
   },
   "schema": "button-group.schema.yml"
 }
