--- a/packages/components/bolt-button/package.json
+++ b/packages/components/bolt-button/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.9.8",
   "author": "Salem Ghoweri",
   "homepage": "https://bolt-design-system.com",
@@ -21,7 +21,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/core": "^1.0.0"
   },
   "scripts": {},
   "schema": "button.schema.yml"
