--- a/packages/components/bolt-chip/package.json
+++ b/packages/components/bolt-chip/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
@@ -30,7 +30,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/core": "^1.0.0"
   },
   "schema": "chip.schema.yml"
 }
