--- a/packages/components/bolt-form/package.json
+++ b/packages/components/bolt-form/package.json
@@ -7,7 +7,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.0.0",
   "author": "Remy Denton",
   "homepage": "https://bolt-design-system.com",
@@ -20,7 +20,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/core": "^1.0.0"
   },
   "schema": "form.schema.yml"
 }
