--- a/packages/components/bolt-link/package.json
+++ b/packages/components/bolt-link/package.json
@@ -8,7 +8,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.0.0",
   "author": "Salem Ghoweri",
   "homepage": "https://bolt-design-system.com",
