--- a/packages/components/bolt-logo/package.json
+++ b/packages/components/bolt-logo/package.json
@@ -11,7 +11,7 @@
     "image",
     "logo"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "sourceFilesFrom": "0.9.8",
   "maintainers": [
     {
@@ -34,8 +34,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-image": "^1.0.0-rc.12",
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/components-image": "^1.0.0",
+    "@bolt/core": "^1.0.0"
   },
   "schema": "logo.schema.yml"
 }
