--- a/packages/components/bolt-share/package.json
+++ b/packages/components/bolt-share/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-share",
   "description": "Share Component in Bolt",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
@@ -18,8 +18,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-icon": "^1.0.0-rc.12",
-    "@bolt/components-link": "^1.0.0-rc.12",
-    "@bolt/core": "^1.0.0-rc.12"
+    "@bolt/components-icon": "^1.0.0",
+    "@bolt/components-link": "^1.0.0",
+    "@bolt/core": "^1.0.0"
   }
 }
