--- a/packages/components/bolt-video/package.json
+++ b/packages/components/bolt-video/package.json
@@ -8,7 +8,7 @@
 		"design system",
 		"components"
 	],
-	"version": "1.0.0-rc.12",
+	"version": "1.0.0",
 	"sourceFilesFrom": "0.10.2",
 	"maintainers": [
 		{
@@ -32,8 +32,8 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/components-button": "^1.0.0-rc.12",
-		"@bolt/core": "^1.0.0-rc.12",
+		"@bolt/components-button": "^1.0.0",
+		"@bolt/core": "^1.0.0",
 		"dasherize": "^2.0.0"
 	}
 }
