--- a/packages/config-presets/config-stylelint/package.json
+++ b/packages/config-presets/config-stylelint/package.json
@@ -5,7 +5,7 @@
     "stylelint",
     "stylelint-config"
   ],
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0",
   "author": "Salem Ghoweri",
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
