Updating shadydom dep from fork with missing branch to latest of main package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@webcomponents/custom-elements": "^1.0.8",
     "@webcomponents/shadycss": "^1.1.1",
-    "@webcomponents/shadydom": "github:muan/shadydom#qsa",
+    "@webcomponents/shadydom": "^1.0.13",
     "@webcomponents/template": "^1.2.2",
     "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^1.1.0",
