Copy to Clipboard / Share - updated package.json dependencies

--- a/packages/components/bolt-copy-to-clipboard/package.json
+++ b/packages/components/bolt-copy-to-clipboard/package.json
@@ -18,6 +18,9 @@
     "access": "public"
   },
   "dependencies": {
-    "clipboard": "^2.0.0"
+    "clipboard": "^2.0.0",
+    "@bolt/core": "^1.0.0-rc.9",
+    "@bolt/components-link": "^1.0.0-rc.9",
+    "@bolt/components-icon": "^1.0.0-rc.9"
   }
 }
