--- a/packages/components/bolt-share/package.json
+++ b/packages/components/bolt-share/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.9",
     "@bolt/components-link": "^1.0.0-rc.9",
-    "@bolt/components-icon": "^1.0.0-rc.9"
+    "@bolt/components-icon": "^1.0.0-rc.9",
+    "@bolt/components-tooltip": "0.0.0",
+    "@bolt/components-block-list": "0.0.0",
+    "@bolt/components-copy-to-clipboard": "0.0.0"
   }
 }
