WIP - batching together collection of component updates to PR separately

--- a/apps/example_drupal_theme/example_drupal_theme.libraries.yml
+++ b/apps/example_drupal_theme/example_drupal_theme.libraries.yml
@@ -12,12 +12,12 @@ device-viewer:
   js:
     dist/bolt-components-device-viewer.js: {}
 
-nav-bar:
+navbar:
   css:
     base:
-      dist/bolt-components-nav-bar.css: {}
+      dist/bolt-components-navbar.css: {}
   js:
-    dist/bolt-components-nav-bar.js: {}
+    dist/bolt-components-navbar.js: {}
 
 smooth-scroll:
   css:
