--- a/packages/components/bolt-chip/package.json
+++ b/packages/components/bolt-chip/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-chip",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "style": "src/_chip.scss",
+  "style": "src/chip.scss",
   "publishConfig": {
     "access": "public"
   },
