--- a/packages/components/bolt-device-viewer/package.json
+++ b/packages/components/bolt-device-viewer/package.json
@@ -27,7 +27,7 @@
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-device-viewer",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "main": "src/device-viewer.js",
-  "style": "src/_device-viewer.scss",
+  "style": "src/device-viewer.scss",
   "publishConfig": {
     "access": "public"
   },
