--- a/packages/components/bolt-nav/package.json
+++ b/packages/components/bolt-nav/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@bolt/components-nav-list",
-  "description": "Nav-list Component in Bolt",
+  "name": "@bolt/components-nav",
+  "description": "Nav Component in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
-    "css framework",
     "design system",
     "components"
   ],
@@ -23,12 +22,13 @@
   ],
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav-bar",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "style": "src/nav-list.scss",
   "publishConfig": {
     "access": "public"
   },
+  "style": "nav.scss",
+  "main": "index.js",
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.9",
     "gumshoejs": "^3.5.0"
