--- a/packages/components/bolt-navbar/package.json
+++ b/packages/components/bolt-navbar/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/components-figure",
-  "description": "Figure Component in Bolt",
+  "name": "@bolt/components-navbar",
+  "description": "Navbar Component in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -8,8 +8,7 @@
     "design system",
     "components"
   ],
-  "version": "1.0.0-rc.9",
-  "sourceFilesFrom": "0.9.0",
+  "version": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -24,14 +23,15 @@
   ],
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-figure",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-navbar",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "style": "src/figure.scss",
+  "style": "navbar.scss",
+  "main": "navbar.js",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.9"
   },
-  "schema": "figure.schema.yml"
+  "schema": "Navbar.schema.yml"
 }
