--- a/apps/example_drupal_theme/package.json
+++ b/apps/example_drupal_theme/package.json
@@ -15,7 +15,7 @@
     "@bolt/components-button-group": "^1.0.0-rc.9",
     "@bolt/components-card": "^1.0.0-rc.9",
     "@bolt/components-device-viewer": "^1.0.0-rc.9",
-    "@bolt/components-nav-bar": "^1.0.0-rc.9",
+    "@bolt/components-navbar": "0.0.0",
     "@bolt/components-smooth-scroll": "^1.0.0-rc.9",
     "@bolt/core": "^1.0.0-rc.9",
     "@bolt/global": "^1.0.0-rc.9"
