--- a/packages/components/bolt-dropdown/package.json
+++ b/packages/components/bolt-dropdown/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-dropdown",
   "style": "dropdown.scss",
-  "main": "dropdown.polyfilled.js",
+  "main": "dropdown.js",
   "twig": "dropdown.twig",
   "description": "Dropdown Component",
   "keywords": [
