--- a/packages/components/bolt-headline/package.json
+++ b/packages/components/bolt-headline/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-headline",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "style": "src/all-headlines.scss",
+  "style": "src/headline.scss",
   "publishConfig": {
     "access": "public"
   },
