--- a/packages/components/bolt-navlink/package.json
+++ b/packages/components/bolt-navlink/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "@bolt/components-nav-bar",
-  "description": "Nav-bar Component in Bolt",
+  "name": "@bolt/components-navlink",
+  "description": "Navlink Component in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
-    "css framework",
     "design system",
     "components"
   ],
-  "version": "1.0.0-rc.9",
-  "sourceFilesFrom": "0.10.2",
+  "version": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -24,16 +22,14 @@
   ],
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav-bar",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "main": "src/nav-bar.js",
-  "style": "src/nav-bar.scss",
   "publishConfig": {
     "access": "public"
   },
+  "style": "navlink.scss",
+  "main": "index.js",
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.9",
-    "gumshoejs": "^3.5.0"
-  },
-  "schema": "nav-bar.schema.yml"
+    "@bolt/core": "^1.0.0-rc.9"
+  }
 }
