--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -13,15 +13,20 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-object-rest-spread": "^v7.0.0-beta.40",
-    "@babel/plugin-syntax-decorators": "7.0.0-beta.40",
-    "@babel/plugin-syntax-dynamic-import": "^v7.0.0-beta.40",
-    "@babel/plugin-syntax-jsx": "^7.0.0-beta.40",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.40",
-    "@babel/preset-env": "^v7.0.0-beta.40"
+    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.42",
+    "@babel/plugin-syntax-export-default-from": "^7.0.0-beta.42",
+    "@babel/runtime": "^7.0.0-beta.42",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.42",
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-object-rest-spread": "^v7.0.0-beta.42",
+    "@babel/plugin-syntax-decorators": "7.0.0-beta.42",
+    "@babel/plugin-syntax-dynamic-import": "^v7.0.0-beta.42",
+    "@babel/plugin-syntax-jsx": "^7.0.0-beta.42",
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.42",
+    "@babel/preset-env": "^v7.0.0-beta.42"
   },
   "keywords": [
     "babel",
