--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,12 +7,12 @@
   "style": "styles/index.scss",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/core",
   "dependencies": {
-    "@webcomponents/custom-elements": "^1.0.8",
-    "@webcomponents/shadycss": "^1.1.1",
-    "@webcomponents/shadydom": "github:muan/shadydom#qsa",
-    "@webcomponents/template": "^1.2.2",
+    "@webcomponents/custom-elements": "^1.0.9",
+    "@webcomponents/shadycss": "^1.1.2",
+    "@webcomponents/shadydom": "^1.0.13",
+    "@webcomponents/template": "^1.2.3",
     "@webcomponents/webcomponents-platform": "^1.0.0",
-    "@webcomponents/webcomponentsjs": "^1.1.0",
+    "@webcomponents/webcomponentsjs": "^1.1.1",
     "breakpoint-sass": "^2.7.1",
     "breakpoint-slicer": "bolt-design-system/breakpoint-slicer",
     "core-js": "^2.5.1",
