refactor: break apart nav-bar component into separate nav, navbar, and navlink components -- sub-component work related to larger dropdown component build

--- a/apps/example_drupal_theme/package.json
+++ b/apps/example_drupal_theme/package.json
@@ -15,7 +15,7 @@
     "@bolt/components-button-group": "^1.0.2",
     "@bolt/components-card": "^1.0.2",
     "@bolt/components-device-viewer": "^1.0.2",
-    "@bolt/components-nav-bar": "^1.0.2",
+    "@bolt/components-navbar": "^0.0.0",
     "@bolt/components-smooth-scroll": "^1.0.0",
     "@bolt/core": "^1.0.2",
     "@bolt/global": "^1.0.2"
