--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -42,7 +42,9 @@
     "@bolt/components-image": "^1.0.2",
     "@bolt/components-link": "^1.0.2",
     "@bolt/components-logo": "^1.0.2",
-    "@bolt/components-nav-bar": "^1.0.2",
+    "@bolt/components-nav": "0.0.0",
+    "@bolt/components-navlink": "0.0.0",
+    "@bolt/components-navbar": "0.0.0",
     "@bolt/components-ordered-list": "^1.0.2",
     "@bolt/components-page-footer": "^1.0.0",
     "@bolt/components-page-header": "^1.0.2",
