chore: cleaning up imports, package.json files being pointed at. Update nav component to wait till bolt-navlink component is registered before continuing with event handlers

--- a/packages/components/bolt-nav/package.json
+++ b/packages/components/bolt-nav/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "main": "nav.js",
+  "main": "index.js",
   "style": "nav.scss",
   "publishConfig": {
     "access": "public"
