fix: update navlink component to correctly point to latest version of @bolt/core

--- a/packages/components/bolt-navlink/package.json
+++ b/packages/components/bolt-navlink/package.json
@@ -30,6 +30,6 @@
   "style": "navlink.scss",
   "main": "index.js",
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.9"
+    "@bolt/core": "^1.0.2"
   }
 }
