--- a/packages/components/bolt-figure/package.json
+++ b/packages/components/bolt-figure/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-figure",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "style": "src/_figure.scss",
+  "style": "src/figure.scss",
   "publishConfig": {
     "access": "public"
   },
