--- a/packages/components/bolt-page-header/package.json
+++ b/packages/components/bolt-page-header/package.json
@@ -17,7 +17,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "style": "src/_page-header.scss",
+  "style": "src/page-header.scss",
   "dependencies": {
     "@bolt/core": "^1.0.2"
   },
