chore: add missing log dependency (error thrown when log level set to a certain level of verbosity); fix webpack dev server + HMR in build config; add inline-source-loader to Webpack

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -39,6 +39,7 @@
     "file-loader": "^1.1.8",
     "front-matter": "^2.3.0",
     "globby": "^7.1.1",
+    "inline-source-loader": "^0.0.1",
     "js-yaml": "^3.10.0",
     "jsonschema": "^1.2.2",
     "lodash.debounce": "^4.0.8",
