create pw-video component

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "packages/components/bolt-tooltip",
     "packages/components/bolt-unordered-list",
     "packages/components/bolt-video",
+    "packages/components/pw-video",
     "packages/core",
     "packages/global",
     "packages/build-tools",
