--- a/apps/pw-site/package.json
+++ b/apps/pw-site/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@bolt/standalone-video",
+  "name": "@bolt/pw-site",
   "version": "1.0.0",
-  "private": true,
   "license": "MIT",
   "scripts": {
     "build": "bolt build",
@@ -25,5 +24,8 @@
     "@bolt/core": "^1.0.0",
     "@bolt/global": "^1.0.0",
     "broken-link-checker": "^0.7.7"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
