Fixed version numbers

--- a/packages/components/bolt-tooltip/package.json
+++ b/packages/components/bolt-tooltip/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-tooltip",
   "description": "Tooltip Component in Bolt",
-  "version": "1.0.2",
+  "version": "0.0.0",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@bolt/components-button": "^1.0.2",
-    "@bolt/core": "^1.0.2",
+    "@bolt/core": "^1.0.0-rc.9",
     "@bolt/global": "^1.0.2"
   }
 }
