--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -24,7 +24,7 @@
     "@bolt/components-background": "^1.0.2",
     "@bolt/components-background-shapes": "^1.0.2",
     "@bolt/components-band": "^1.0.2",
-    "@bolt/components-block-list": "^1.0.2",
+    "@bolt/components-block-list": "0.0.0",
     "@bolt/components-blockquote": "^1.0.2",
     "@bolt/components-breadcrumb": "^1.0.2",
     "@bolt/components-button": "^1.0.2",
@@ -32,7 +32,7 @@
     "@bolt/components-card": "^1.0.2",
     "@bolt/components-chip": "^1.0.2",
     "@bolt/components-chip-list": "^1.0.2",
-    "@bolt/components-copy-to-clipboard": "^1.0.2",
+    "@bolt/components-copy-to-clipboard": "0.0.0",
     "@bolt/components-critical-fonts": "^1.0.2",
     "@bolt/components-device-viewer": "^1.0.2",
     "@bolt/components-figure": "^1.0.2",
@@ -46,12 +46,12 @@
     "@bolt/components-ordered-list": "^1.0.2",
     "@bolt/components-page-footer": "^1.0.0",
     "@bolt/components-page-header": "^1.0.2",
-    "@bolt/components-share": "^1.0.2",
+    "@bolt/components-share": "0.0.0",
     "@bolt/components-site": "^1.0.0",
     "@bolt/components-smooth-scroll": "^1.0.0",
     "@bolt/components-sticky": "^1.0.0",
     "@bolt/components-teaser": "^1.0.2",
-    "@bolt/components-tooltip": "^1.0.2",
+    "@bolt/components-tooltip": "0.0.0",
     "@bolt/components-unordered-list": "^1.0.2",
     "@bolt/components-video": "^1.0.2",
     "@bolt/core": "^1.0.2",
