--- a/packages/components/bolt-share/package.json
+++ b/packages/components/bolt-share/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-share",
   "description": "Share Component in Bolt",
-  "version": "1.0.2",
+  "version": "0.0.0",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
@@ -12,14 +12,16 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "style": "src/share.scss",
-  "main": "src/share.js",
   "twig": "src/share.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-icon": "^1.0.2",
-    "@bolt/components-link": "^1.0.2",
-    "@bolt/core": "^1.0.2"
+    "@bolt/core": "^1.0.0-rc.9",
+    "@bolt/components-link": "^1.0.0-rc.9",
+    "@bolt/components-icon": "^1.0.0-rc.9",
+    "@bolt/components-tooltip": "0.0.0",
+    "@bolt/components-block-list": "0.0.0",
+    "@bolt/components-copy-to-clipboard": "0.0.0"
   }
 }
