--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,8 @@
 **/node_modules/**
 **/vendor/**
 **/sandbox/**
+/www/**
+/apps/drupal-lab/**
+**/dist/**
+# file has syntax errors
+apps/pattern-lab/src/_annotations/annotations.js
