--- a/packages/components/bolt-copy-to-clipboard/package.json
+++ b/packages/components/bolt-copy-to-clipboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-copy-to-clipboard",
   "description": "Copy to Clipboard Component in Bolt",
-  "version": "0.0.0",
+  "version": "1.0.3",
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
   "repository": {
@@ -18,9 +18,9 @@
     "access": "public"
   },
   "dependencies": {
-    "clipboard": "^2.0.0",
-    "@bolt/core": "^1.0.0-rc.9",
+    "@bolt/components-icon": "^1.0.3",
     "@bolt/components-link": "^1.0.0-rc.9",
-    "@bolt/components-icon": "^1.0.0-rc.9"
+    "@bolt/core": "^1.0.3",
+    "clipboard": "^2.0.0"
   }
 }
