Dropdown -- Cleaned up PL Demos, Added PL Docs, Added Schema Validation and Readme

--- a/packages/components/bolt-dropdown/package.json
+++ b/packages/components/bolt-dropdown/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@bolt/components-dropdown",
-  "main": "index.js",
-  "style": "dropdown.scss",
-  "twig": "dropdown.twig",
+  "main": "src/index.js",
+  "style": "src/dropdown.scss",
+  "twig": "src/dropdown.twig",
   "description": "Dropdown Component",
   "keywords": [
     "bolt design system",
@@ -30,5 +30,6 @@
     "classnames": "^2.2.5",
     "ev-emitter": "^1.1.1"
   },
-  "scripts": {}
+  "scripts": {},
+  "schema": "dropdown.schema.yml"
 }
