chore: clean up pw-site package.json file; add new component pulling in the main bolt video package (but compiling use new build tools namespace)

--- a/apps/pw-site/composer.json
+++ b/apps/pw-site/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bolt/standalone-video",
+    "name": "bolt/pw-site",
     "type": "project",
     "license": "MIT",
     "minimum-stability": "dev",
