chore: remove drupal-lab from Yarn workspace packages (root of drupal-lab doesn't have a package.json file)

--- a/package.json
+++ b/package.json
@@ -128,7 +128,6 @@
     "packages/config-presets/config-eslint",
     "packages/config-presets/config-stylelint",
     "apps/drupal-lab/web/themes/flash",
-    "apps/*",
-    "!apps/drupal-lab"
+    "apps/*"
   ]
 }
