--- a/apps/pw-site/package.json
+++ b/apps/pw-site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/pw-site",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-rc.0",
   "license": "MIT",
   "scripts": {
     "build": "bolt build",
