Updating deploy branch to be release/1.x instead of master

--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "version": "1.0.4",
   "command": {
     "publish": {
-      "allowBranch": "master"
+      "allowBranch": "release/1.x"
     },
     "bootstrap": {
       "hoist": true
