Running update php package versions as git precommit hook to tap into lerna publish

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors --exclude=apps/drupal-lab",
     "lint:yaml": "yamllint 'packages/**/*.yml' --ignore='**/vendor/**'",
     "lint": "npm-run-all --continue-on-error --serial lint:*",
+    "precommit": "node scripts/update-php-package-versions.js",
     "prepush": "npm run lint && npm run test",
     "test:js": "jest",
     "test:js:watch": "jest --watch",
