chore: version bump

--- a/packages/components/bolt-nav/package.json
+++ b/packages/components/bolt-nav/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/components-nav-bar",
-  "description": "Nav-bar Component in Bolt",
+  "name": "@bolt/components-nav",
+  "description": "Nav Component in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -9,7 +9,6 @@
     "components"
   ],
   "version": "1.0.3",
-  "sourceFilesFrom": "0.10.2",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -26,8 +25,8 @@
   "license": "MIT",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav-bar",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "main": "src/nav-bar.js",
-  "style": "src/nav-bar.scss",
+  "main": "index.js",
+  "style": "nav.scss",
   "publishConfig": {
     "access": "public"
   },
@@ -35,5 +34,5 @@
     "@bolt/core": "^1.0.3",
     "gumshoejs": "^3.5.0"
   },
-  "schema": "nav-bar.schema.yml"
+  "schema": "nav.schema.yml"
 }
