Rename `nav-bar` component, break apart into sub-components (#559)
* refactor: break apart nav-bar component into separate nav, navbar, and navlink components -- sub-component work related to larger dropdown component build

* chore: cleaning up imports, package.json files being pointed at. Update nav component to wait till bolt-navlink component is registered before continuing with event handlers

* fix: update navlink component to correctly point to latest version of @bolt/core

* chore: update homepage component listing to correctly use renamed navbar component

* chore: update homepage component listing, sticky demo to correctly use renamed navbar component

* chore: move util functions in Bolt Core to standalone files; update core Preact and HyperHTML library dependencies being exported

* chore: update Bolt Core polyfill loader to pull in the `starts with` polyfill from core-js. Fixes IE11 JS error getting thrown in the live PL site's JavaScript

* refactor: remove click event handler baked into the core HyperHTML renderer, move to button component directly. update renderer to automatically process <slot>s that exist in the components using HyperHTML -- part of the no-polyfill workaround if slots are not supported. Update lifecycle events to accommodate automatically running init functionality relating to slots

* refactor: update ratio, band, button, and device viewer components to use updated HyperHTML renderer slot method baked in

* Update create-webpack-config.js

* fix: fixing trailing comma

* fix: fix broken z-index

* refactor: revert merge overwriting nav.js; fixing linting errors

* chore: version bump

* fix: removing CSS var from indicator line till finished troubleshooting CSS var output

* chore: add placeholder schema for nav component

* chore: add nav, navbar and navlink components to package.json

* fix: remove duplicate log dependency

--- a/packages/components/bolt-navbar/package.json
+++ b/packages/components/bolt-navbar/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/components-nav-bar",
-  "description": "Nav-bar Component in Bolt",
+  "name": "@bolt/components-navbar",
+  "description": "Navbar Component in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -9,7 +9,6 @@
     "components"
   ],
   "version": "1.0.3",
-  "sourceFilesFrom": "0.10.2",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -24,16 +23,14 @@
   ],
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav-bar",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-navbar",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "main": "src/nav-bar.js",
-  "style": "src/nav-bar.scss",
+  "style": "navbar.scss",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.3",
-    "gumshoejs": "^3.5.0"
+    "@bolt/core": "^1.0.2"
   },
-  "schema": "nav-bar.schema.yml"
+  "schema": "Navbar.schema.yml"
 }
