RFC: Initial Dropdown Component Implementation (#567)
* feat: initial dropdown component implementation

* fix: fixing linting errors; re-adding @bolt/core dependency to utility classes so JS can compile

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "packages/components/bolt-button-group",
     "packages/components/bolt-button",
     "packages/components/bolt-card",
+    "packages/components/bolt-dropdown",
     "packages/components/bolt-chip-list",
     "packages/components/bolt-chip",
     "packages/components/bolt-copy-to-clipboard",
