Adding and enabling paragraphs module

--- a/apps/drupal-lab/composer.json
+++ b/apps/drupal-lab/composer.json
@@ -31,6 +31,7 @@
     "drupal/console": "^1.0.2",
     "drupal/core": "~8.5",
     "drupal/devel": "^1.2",
+    "drupal/paragraphs": "^1.2",
     "drush/drush": "^9.0.0",
     "webflo/drupal-finder": "^1.0.0",
     "webmozart/path-util": "^2.3"
