Drupal Lab - Adding paragraph headline type, adding it to page type

--- a/apps/drupal-lab/web/themes/flash/package.json
+++ b/apps/drupal-lab/web/themes/flash/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@bolt/build-tools": "^1.0.4",
     "@bolt/components-headline": "^1.0.3",
-    "@bolt/global": "^1.0.3"
+    "@bolt/global": "^1.0.3",
+    "@bolt/components-headline": "^1.0.3"
   }
 }
