Adding node_modules to Travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ cache:
   apt: true
   yarn: true
   directories:
+    - node_modules
     - $HOME/.composer
     - apps/drupal-lab/vendor
     - apps/drupal-lab/web/core
