Adding manual PL compile command to test

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ script:
 #- bash ./travis.sh
 - npm run build:bolt-site
 - npm run build:pl
+- cd apps/pattern-lab && php core/console --generate
 - npm run deploy
 
 after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build.
