Headline / Icon / Link Components - Added to Drupal lab

--- a/apps/drupal-lab/web/themes/flash/package.json
+++ b/apps/drupal-lab/web/themes/flash/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "@bolt/build-tools": "^1.0.4",
-    "@bolt/components-headline": "^1.0.3",
     "@bolt/global": "^1.0.3",
-    "@bolt/components-headline": "^1.0.3"
+    "@bolt/components-headline": "^1.0.3",
+    "@bolt/components-link": "^1.0.2",
+    "@bolt/components-icon": "^1.0.3"
   }
 }
