Paragraphs > Headline and Icon: Exported to config

--- a/apps/drupal-lab/config/sync/core.entity_view_display.node.page.default.yml
+++ b/apps/drupal-lab/config/sync/core.entity_view_display.node.page.default.yml
@@ -25,7 +25,7 @@ content:
   field_paragraphs:
     type: entity_reference_revisions_entity_view
     weight: 102
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -34,4 +34,6 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden: {  }
