--- a/apps/drupal-lab/config/sync/core.entity_view_display.paragraph.headline.default.yml
+++ b/apps/drupal-lab/config/sync/core.entity_view_display.paragraph.headline.default.yml
@@ -3,13 +3,31 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.headline.field_align
     - field.field.paragraph.headline.field_headline
+    - field.field.paragraph.headline.field_icon_extend
+    - field.field.paragraph.headline.field_quoted
+    - field.field.paragraph.headline.field_style
+    - field.field.paragraph.headline.field_tags
+    - field.field.paragraph.headline.field_transform
+    - field.field.paragraph.headline.field_url
+    - field.field.paragraph.headline.field_weight
     - paragraphs.paragraphs_type.headline
+  module:
+    - entity_reference_revisions
+    - options
 id: paragraph.headline.default
 targetEntityType: paragraph
 bundle: headline
 mode: default
 content:
+  field_align:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_headline:
     weight: 0
     label: above
@@ -17,5 +35,60 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_icon_extend:
+    type: entity_reference_revisions_entity_view
+    weight: 9
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_quoted:
+    weight: 8
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_style:
+    weight: 2
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_tags:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_transform:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_url:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_weight:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
 hidden: {  }
